# redis-producer-rust

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/config/: config.rs
src/models/: models.rs
src/utils/: redis.rs  utils.rs
