[package]
name = "redis-producer-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structmap = "0.1.6"
structmap-derive = "0.1.6"
chrono = "0.4.23"
tokio = { version = "1.5.0", features = ["full"] }
redis = { version = "0.22.3", features = ["tokio-comp"] }